.kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moni-deployment
spec:
  selector:
    matchLabels:
      app: moni-deployment
  template:
    metadata:
      labels:
        app: moni-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.1
        resources:
          limits:
            memory: "200Mi"
            cpu: "200m"
          requests:
            memory: "200Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
          name: http-port
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-default-conf
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.11
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
          requests:
            memory: "10Mi"
            cpu: "10m"
        ports:
          - containerPort: 9113
        args:
        - -nginx.scrape-uri=http://localhost:80/metrics
      volumes:
      - name: nginx-default-conf
        configMap:
          name: nginx-configmap-volume
          items:
            - key: default.conf
              path: default.conf
